--- a/Rock-Paper-Scissors/rock-paper-scissors.html
+++ b/Rock-Paper-Scissors/rock-paper-scissors.html
@@ -16,13 +16,8 @@
     <p class="js-move"></p>
     <p class="js-score score"></p>
     
-    <button class="js-reset reset-button" onclick="
-      score.looses = 0;
-      score.wins = 0;
-      score.ties = 0;
-      localStorage.removeItem('score');
-      updateScore();
-    ">Reset Score</button>
+    <button class="js-reset reset-button">Reset Score</button>
+    <button class="auto-play js-auto-play-button">Auto Play</button>
 <script src="./rock-paper-scissors.js"></script>
   </body>
 </html>
