Create confirm reset button

--- a/Rock-Paper-Scissors/rock-paper-scissors.html
+++ b/Rock-Paper-Scissors/rock-paper-scissors.html
@@ -18,6 +18,7 @@
     
     <button class="js-reset reset-button">Reset Score</button>
     <button class="auto-play js-auto-play-button">Auto Play</button>
+    <p class="js-show-confirm-result"></p>
 <script src="./rock-paper-scissors.js"></script>
   </body>
 </html>
